--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
+    "react-loader-spinner": "^2.2.0",
     "react-modal": "^3.6.1",
     "react-responsive-modal": "^3.5.1",
     "react-router-dom": "^4.3.1",
